# the-night-of-the-werewolf

./: .gitignore  CMakeLists.txt  README.md  TheRunningWerewolf.sln
TheRunningWerewolf/: Animation.cpp  AssetManager.cpp  AssetManager.h  Game.cpp  GameObject.cpp  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  Layer.cpp  Player.cpp  Player.h  TheRunningWerewolf.vcxproj  TheRunningWerewolf.vcxproj.filters  Vector2.cpp
assets/: GameOver.ptm
assets/Police/: Idle (1).ptm  Idle (10).ptm  Idle (2).ptm  Idle (3).ptm  Idle (4).ptm  Idle (5).ptm  Idle (6).ptm  Idle (7).ptm  Idle (8).ptm  Idle (9).ptm
assets/Scenery/Background/: BG.ptm
assets/Scenery/MiddleGround/: 1.ptm  2.ptm  2_extended.ptm  3.ptm  3_extended.ptm  4.ptm  4_extended.ptm  5.ptm  5_extended.ptm
assets/Werewolf/: Jump (1).ptm  Jump (2).ptm  Jump (3).ptm  Jump (4).ptm  Jump (5).ptm  Jump (6).ptm  Jump (7).ptm  Jump (8).ptm  Run (1).ptm  Run (2).ptm  Run (3).ptm  Run (4).ptm  Run (5).ptm  Run (6).ptm  Run (7).ptm  Run (8).ptm
source/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Cop.cpp  Cop.h  Game.cpp  GameObject.h  Image.cpp  ImageLoader.cpp  ImageLoader.h  Layer.cpp  Layer.h  Player.cpp  Vector2.cpp  Vector2.h
